--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -1,14 +1,16 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light border-bottom p-0 lspace-3">
 
   <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item pl-md-3">
+    <ul class="navbar-nav text-center" style="width:75%; margin:0 auto;">
+      <!--Home-->
+      <li class="nav-item">
         <a class="nav-link s2bold" routerLink='/' routerLinkActive="active">
           <h1 class="s2bold">Home</h1>
         </a>
       </li>
-
-      <li class="nav-item dropdown pl-md-3">
+      <span class="navspace"></span>
+      <!--Hire dropdown-->
+      <li class="nav-item dropdown">
         <div class="nav-link dropdown-toggle s2bold" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false" data-offset="-100,-50">
           <h1 class="s2bold">Hire</h1>
@@ -35,17 +37,21 @@
                     <a class="dropdown-item s2">123123</a>
                 </div> -->
       </li>
-
-      <li class="nav-item pl-md-3">
+      <span class="navspace"></span>
+      <!--Party services-->
+      <li class="nav-item">
         <a class="nav-link s2bold" routerLink='/services' routerLinkActive="active">
           <h1 class="s2bold">Party Services</h1>
         </a>
       </li>
-      <li class="nav-item pl-md-3">
+      <span class="navspace"></span>
+      <!--Party Packages-->
+      <li class="nav-item">
         <a class="nav-link s2bold" routerLink='/packages' routerLinkActive="active">
           <h1 class="s2bold">Party Packages</h1>
         </a>
       </li>
+
     </ul>
   </div>
 
@@ -59,30 +65,39 @@
   </div>
 
   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item pr-md-5">
+    <ul class="navbar-nav" style="width:80%;margin:0 auto;">
+      <!--Gallery-->
+      <li class="nav-item">
         <a class="nav-link s2bold" routerLink='/galleries' routerLinkActive="active">
           <h1 class="s2bold">Gallery</h1>
         </a>
       </li>
-      <li class="nav-item pr-md-5">
+      <span class="navspace"></span>
+      <!--About us-->
+      <li class="nav-item">
         <a class="nav-link s2bold" routerLink='/aboutUs' routerLinkActive="active">
           <h1 class="s2bold">About us</h1>
         </a>
       </li>
-      <li class="nav-item pr-md-5">
+      <span class="navspace"></span>
+      <!--FAQ-->
+      <li class="nav-item">
         <a class="nav-link s2bold" routerLink='/faq' routerLinkActive="active">
           <h1 class="s2bold">FAQ</h1>
         </a>
       </li>
-      <li class="nav-item pr-md-3">
+      <span class="navspace"></span>
+      <!--/Contact us-->
+      <li class="nav-item">
         <a class="nav-link s2bold" routerLink='/contactUs' routerLinkActive="active">
-          <h1 class="s2bold">Contact Us</h1>
+          <h1 class="s2bold">Contact us</h1>
         </a>
       </li>
-      <li class="nav-item ">
+      <!--Shooping Cart-->
+      <li class="nav-item">
         <a class="nav-link s2bold" routerLink='/shoppingCart' routerLinkActive="active">
-          <h1 class="s2bold"><i class="fas fa-shopping-cart" title="View Shopping Cart"></i>
+          <h1 class="s2bold">
+              <i class="fas fa-shopping-cart" title="View Shopping Cart"></i>
           </h1>
         </a>
       </li>
