--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -27,20 +27,20 @@
     <div class="row mt-2 mt-md-5 contactUs mx-2 mx-md-5">
       <div class="col-12 col-sm-6 col-lg-4 s2bold pl-md-3">
         <ul> <span class="s1 text-white">Lux Dream Event Hire</span>
-          <li class="mt-md-2 pt-2 text-decoration-underline text-white-50"><a [routerLink]="['/aboutUs']">About us</a>
+          <li class="mt-md-2 pt-2 text-decoration-underline text-white-50"><a routerLink="/aboutUs">About us</a>
           </li>
-          <li class="mt-2 text-decoration-underline text-white-50"> <a [routerLink]="[ '/contactUs']">Contact</a> </li>
-          <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/faq']">FAQ</a></li>
-          <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/shoppingCart']">Shopping
+          <li class="mt-2 text-decoration-underline text-white-50"> <a routerLink="/contactUs">Contact</a> </li>
+          <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/faq">FAQ</a></li>
+          <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/shoppingCart">Shopping
               Cart</a></li>
         </ul>
       </div>
       <div class="col-12 col-sm-6 col-lg-4 s2bold pl-md-3">
         <ul><span class="s1  text-white">Our Services</span>
-          <li class="mt-md-2 pt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/hire']">Hire</a></li>
-          <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/services']">Event services</a>
+          <li class="mt-md-2 pt-2 text-decoration-underline text-white-50"><a routerLink="/hire">Hire</a></li>
+          <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/services">Event services</a>
           </li>
-          <li class="mt-2 text-decoration-underline text-white-50"><a [routerLink]="[ '/packages']">Event packages</a>
+          <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/packages">Event packages</a>
           </li>
         </ul>
       </div>
