--- a/src/app/fcomponents/pages/aboutUs/aboutUs.component.html
+++ b/src/app/fcomponents/pages/aboutUs/aboutUs.component.html
@@ -22,7 +22,7 @@
       We will always be committed to being the creator of your most beautiful moments, adding to your perfect and exquisite life, 
       awakening your vision and expectation, and rejuvenating the unprecedented power.
       <br><br><br>
-      <button type="button" class="btn btn-outline-gold lspace-3" [routerLink]="[ '/hire']">View our products</button>
+      <button type="button" class="btn btn-outline-gold lspace-3" routerLink="/hire">View our products</button>
     </div>
     <br>
     <br><br>
