--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -82,7 +82,7 @@
 
     <div class="row justify-content-md-center my-3">
         <div class="col-12 text-center">
-          <button type="button" class="btn btn-outline-gold lspace-3" [routerLink]="[ '/hire']">View our products</button>
+          <button type="button" class="btn btn-outline-gold lspace-3" routerLink="/hire">View our products</button>
         </div>
       </div>
     </div>
@@ -101,7 +101,7 @@
       </div>
       <br>
       <div class="row"><div class="col-12 text-center s1">Or see our work galleries</div></div>
-      <div class="row mb-5"><div class="col-12 text-center"><button type="button" class="btn btn-outline-gold my-4 lspace-3" [routerLink]="[ '/galleries']"> View Our Gallery</button></div></div>
+      <div class="row mb-5"><div class="col-12 text-center"><button type="button" class="btn btn-outline-gold my-4 lspace-3" routerLink="/galleries"> View Our Gallery</button></div></div>
 
       <!-- styling -->
       <div class="row">
@@ -117,7 +117,7 @@
               elements together to create a picture-perfect setting?<br/><br/>Luxe Dream Event Hire love to create incredible
               events that inspire and excite!
             </div>
-            <button type="button" class="btn btn-outline-gold my-md-5 lspace-3" [routerLink]="[ '/services']">View our services</button>
+            <button type="button" class="btn btn-outline-gold my-md-5 lspace-3" routerLink="/services">View our services</button>
           </div>
         </div>
     
@@ -130,7 +130,7 @@
                 Find a event rental package that suit your needs from weddings to parties.
                 Whether you need tables and stands for your event or want to spell out something special with our beautiful letters, we've got you sorted without ripping your wallet.
               </div>
-              <button type="button" class="btn btn-outline-gold my-md-5 lspace-3" [routerLink]="[ '/packages']">View our packages</button>
+              <button type="button" class="btn btn-outline-gold my-md-5 lspace-3" routerLink="/packages">View our packages</button>
             </div>
             <!-- <div class="col-12 col-md-6"><img src="../../../../assets/images/5da0c82500e7be45dc17d023ea7e2c83.jpg "class=" d-block ml-auto " style="position: absolute;
               clip: rect(0px,auto,500px,0px);"></div> -->
