--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -51,12 +51,12 @@
   
       <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
         <!-- Dashboard -->
-        <div *ngIf="blockCode == 1">
+        <div *ngIf="blockCode == '1'">
           This is Dashboard
         </div>
 
         <!-- Hire || Service || Package-->
-        <div *ngIf="blockCode == 2 || blockCode == 3 || blockCode == 4">
+        <div *ngIf="blockCode == '2' || blockCode == '3' || blockCode == '4'">
           <div *ngIf="blockCode == 2"><h2>Hires</h2></div>
           <div *ngIf="blockCode == 3"><h2>Services</h2></div>
           <div *ngIf="blockCode == 4"><h2>Packages</h2></div>
@@ -77,7 +77,7 @@
         </div>
 
         <!-- Gallery -->
-        <div *ngIf="blockCode == 5">
+        <div *ngIf="blockCode == '5'">
             <table class="table">
               <thead>
                 <tr>
@@ -95,7 +95,7 @@
         </div>
 
         <!-- Faq -->
-        <div *ngIf="blockCode == 6">
+        <div *ngIf="blockCode == '6'">
           <h2>Faq</h2>
           <table class="table">
               <thead>
@@ -112,7 +112,7 @@
         </div>
 
         <!-- Cart -->
-        <div *ngIf="blockCode == 7">
+        <div *ngIf="blockCode == '7'">
           <h2>Carts</h2>
           <table class="table">
               <thead>
