--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -16,7 +16,7 @@
             <button class="btn btn-secondary dropdown-toggle w-100 text-left s1" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               {{selectedCate}}</button>
             <div class="dropdown-menu w-100 text-left s1" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" [routerLink]="[ '/hire']">All Products</a>
+                <a class="dropdown-item" routerLink="/hire">All Products</a>
               <!-- <div *ngFor="let category of allCategories"> <a class="dropdown-item" (click)="changeCate(category.categoryId,$event)">{{category.categoryName}}</a></div> -->
               <div *ngFor="let category of allCategories"> <a class="dropdown-item" [routerLink]="[ '/category/', category.categoryId ]">{{category.categoryName}}</a> </div>
             </div>
