--- a/src/app/fcomponents/shopping_cart/shopping_cart.component.html
+++ b/src/app/fcomponents/shopping_cart/shopping_cart.component.html
@@ -22,13 +22,13 @@
 
     <div *ngIf="prodsInCart.length==0">
       Your Cart is empty now. Please add some products.
-      <button class="btn btn-outline-gold" [routerLink]="[ '/hire' ]">View Our Products</button>
+      <button class="btn btn-outline-gold" routerLink="/hire">View Our Products</button>
     </div>
     <div class="text-right mb-2">
       Total Price: $<span class="s2bold">{{totalPrice}}</span>
     </div>
     <div class="justify-content-end mb-3" *ngIf="prodsInCart.length!=0">
-      <button class="btn btn_gold btn-sm" [routerLink]="['/']" type="button">
+      <button class="btn btn_gold btn-sm" routerLink="/" type="button">
         <i class="fas fa-arrow-left"></i>&nbsp;Continue Shopping
       </button>
       <button class="btn btn-outline-gold btn-sm" routerLink='/userInfo' style="float:right;">Process to checkout</button>
