--- a/src/app/fcomponents/gallery-list/gallery-list.component.html
+++ b/src/app/fcomponents/gallery-list/gallery-list.component.html
@@ -1,20 +1,35 @@
 <div class="container-fluid">
   <div class="px-0 px-md-5 mx-2">
 
-  <div class="row text-center l1">
-  <div class="col-12 my-2 my-md-5"> Our Gallery</div>
-  </div>
-  
+    <div class="row text-center l1">
+      <div class="col-12 my-2 my-md-5"> Our Gallery</div>
+    </div>
+
     <!-- Gallery List -->
-  <div class="row j1" >
-    <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Weddings"><div class="gallaryBlocks"  style="background-image:url('../../../assets/gallery/gallery1.jpg');">Weddings</div></a></div>
-    <div class="col-12 col-md-6 pb-30"><a style="color:white " routerLink="/galleries/Birthday"><div class="gallaryBlocks"  style="background-image:url('../../../assets/gallery/gallery2.jpg');">Birthday Party</div></a></div>
+    <div class="row j1">
+      <div class="col-12 col-md-6 pb-30">
+        <a routerLink="/galleries/Weddings">
+          <div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery2.jpg');">Weddings</div>
+        </a></div>
+      <div class="col-12 col-md-6 pb-30"><a style="color:white " routerLink="/galleries/Birthday">
+          <div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery1.jpg');">Birthday
+            Party</div>
+        </a></div>
+      <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Girls Night">
+          <div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery3.jpg');">Girls Night</div>
+        </a></div>
+      <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Corporate Event">
+          <div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery4.jpg');">Corporate
+            Event</div>
+        </a></div>
+      <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Baby Shower">
+          <div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/babyshower.jpg');">Baby
+            Shower</div>
+        </a></div>
+      <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Luxe Dream Floral Studio">
+          <div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/flower.jpg');">Floral Studio</div>
+        </a></div>
 
-    <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Girls Night"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery3.jpg');">Girls Night</div></a></div>
-    <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Corporate Event"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/gallery4.jpg');">Corporate Event</div></a></div>
-    <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Baby Shower"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/babyshower.jpg');">Baby Shower</div></a></div>
-    <div class="col-12 col-md-6 pb-30"><a routerLink="/galleries/Luxe Dream Floral Studio"><div class="gallaryBlocks" style="background-image:url('../../../assets/gallery/flower.jpg');">Floral Studio</div></a></div>
-
-  </div>
+    </div>
   </div>
 </div>
