--- a/src/styles.css
+++ b/src/styles.css
@@ -136,7 +136,7 @@ body{
 }
 
 .s2bold {
-  font-family: 'Source Serif Pro', serif;
+  font-family: 'RobotoThin', serif;
   font-size: 17px;
   color: #535353;
   font-weight: 700;
