--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -29,10 +29,10 @@
         <ul> <span class="s1 text-white">Lux Dream Event Hire</span>
           <li class="mt-md-2 pt-2 text-decoration-underline text-white-50"><a routerLink="/aboutUs">About us</a>
           </li>
-          <li class="mt-2 text-decoration-underline text-white-50"> <a routerLink="/contactUs">Contact</a> </li>
+          <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/contactUs">Contact</a> </li>
           <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/faq">FAQ</a></li>
-          <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/shoppingCart">Shopping
-              Cart</a></li>
+          <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/shoppingCart">Shopping Cart</a></li>
+          <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/login">Login</a></li>
         </ul>
       </div>
       <div class="col-12 col-sm-6 col-lg-4 s2bold pl-md-3">
