--- a/src/app/fcomponents/AdminDialogs/galleryDialog/galleryDialog.component.html
+++ b/src/app/fcomponents/AdminDialogs/galleryDialog/galleryDialog.component.html
@@ -1,3 +1,23 @@
-<p>
-  galleryDialog works!
-</p>
+<h2 mat-dialog-title>{{title}}</h2>
+
+<mat-dialog-content>
+    <!-- Customer -->
+    <div class="form-group">
+        <input class="form-control" name="CustomerName" placeholder="CustomerName *" [(ngModel)]="galleryForm.CustomerName" #CustomerName="ngModel">
+     </div>
+     <!-- Event Name -->
+     <div>
+        <h3>EventName: {{galleryForm.eventName}}</h3>
+     </div>
+     <!-- Description -->
+     <div class="form-group">
+        <input class="form-control" name="Description" placeholder="Description *" [(ngModel)]="galleryForm.Description" #Description="ngModel">
+     </div>
+
+</mat-dialog-content>
+
+<mat-dialog-actions>
+    <button class="mat-raised-button"(click)="close()">Close</button>
+    <button class="mat-raised-button mat-primary"(click)="save()" *ngIf="status == 'update'">Save</button>
+    <button class="mat-raised-button mat-primary"(click)="create()" *ngIf="status == 'create'" [disabled]="faqForm.Answer == '' || faqForm.Question == ''">Create</button>
+</mat-dialog-actions>
