--- a/src/app/fcomponents/admin/admin.component.html
+++ b/src/app/fcomponents/admin/admin.component.html
@@ -81,6 +81,7 @@
         <!-- !Gallery -->
         <div *ngIf="blockCode == '5'">
             <h2>Gallery</h2>
+            <i class="fas fa-plus" (click)="createGallery()"></i>
             <table class="table">
               <thead>
                 <tr>
